--- a/collated/main/A0139975J.md
+++ b/collated/main/A0139975J.md
@@ -1,5 +1,5 @@
 # A0139975J
-###### /java/seedu/task/logic/commands/DoneCommand.java
+###### \java\seedu\task\logic\commands\DoneCommand.java
 ``` java
 /**
  * Update the status of the task to done using the index to identity the specific task.
@@ -38,7 +38,7 @@ public class DoneCommand extends Command {
 
 }
 ```
-###### /java/seedu/task/logic/commands/ListCommand.java
+###### \java\seedu\task\logic\commands\ListCommand.java
 ``` java
 /**
  * Lists all task in KIT to the user. Able to either list all task, all done task,all undone task or list by tag.
@@ -104,7 +104,7 @@ public class ListCommand extends Command {
 
 }
 ```
-###### /java/seedu/task/logic/commands/UndoneCommand.java
+###### \java\seedu\task\logic\commands\UndoneCommand.java
 ``` java
 /**
  * Update the status of the task to not done/undone using the index to identity the specific task.
@@ -143,7 +143,7 @@ public class UndoneCommand extends Command {
 
 }
 ```
-###### /java/seedu/task/logic/parser/DoneCommandParser.java
+###### \java\seedu\task\logic\parser\DoneCommandParser.java
 ``` java
 public class DoneCommandParser extends CommandParser {
 
@@ -157,7 +157,7 @@ public class DoneCommandParser extends CommandParser {
     }
 }
 ```
-###### /java/seedu/task/logic/parser/UndoneCommandParser.java
+###### \java\seedu\task\logic\parser\UndoneCommandParser.java
 ``` java
 public class UndoneCommandParser extends CommandParser {
 
@@ -171,24 +171,24 @@ public class UndoneCommandParser extends CommandParser {
     }
 }
 ```
-###### /java/seedu/task/model/Model.java
+###### \java\seedu\task\model\Model.java
 ``` java
     /** Updates the task to done. */
     void isDoneTask(int index) throws UniqueTaskList.TaskNotFoundException;
 ```
-###### /java/seedu/task/model/Model.java
+###### \java\seedu\task\model\Model.java
 ``` java
     /** Updates the task from done to undone */
     void unDoneTask(int index) throws UniqueTaskList.TaskNotFoundException;
 
 ```
-###### /java/seedu/task/model/Model.java
+###### \java\seedu\task\model\Model.java
 ``` java
     /** Updates the filter of the filtered task list to filter by the given date */
     //void updateFilteredTaskList(Date value);
 
 ```
-###### /java/seedu/task/model/Model.java
+###### \java\seedu\task\model\Model.java
 ``` java
     /** Updates the filer of the filtered task list to filter by done or undone task */
     void updateFilteredTaskList(boolean value);
@@ -197,13 +197,13 @@ public class UndoneCommandParser extends CommandParser {
     void updateFilteredTaskList(Set<String> keywords, Date date, boolean isexact);
 
 ```
-###### /java/seedu/task/model/Model.java
+###### \java\seedu\task\model\Model.java
 ``` java
     /** Updates the filer of the filtered task list to filter by floating task */
     void updateFilteredTaskListFloat();
 
 ```
-###### /java/seedu/task/model/ModelManager.java
+###### \java\seedu\task\model\ModelManager.java
 ``` java
     @Override
     public synchronized void isDoneTask(int index) throws TaskNotFoundException {
@@ -213,7 +213,7 @@ public class UndoneCommandParser extends CommandParser {
     }
 
 ```
-###### /java/seedu/task/model/ModelManager.java
+###### \java\seedu\task\model\ModelManager.java
 ``` java
     @Override
     public synchronized void unDoneTask(int index) throws TaskNotFoundException {
@@ -223,28 +223,28 @@ public class UndoneCommandParser extends CommandParser {
     }
 
 ```
-###### /java/seedu/task/model/ModelManager.java
+###### \java\seedu\task\model\ModelManager.java
 ``` java
     @Override
     public void updateFilteredTaskListFloat() {
         updateFilteredTaskList(new PredicateExpression(new FloatDateQualifier()));
     }
 ```
-###### /java/seedu/task/model/ModelManager.java
+###### \java\seedu\task\model\ModelManager.java
 ``` java
     private class DateQualifier implements Qualifier {
 
         private Date date;
 
 ```
-###### /java/seedu/task/model/ModelManager.java
+###### \java\seedu\task\model\ModelManager.java
 ``` java
         DateQualifier(Date date) {
             this.date = date;
         }
 
 ```
-###### /java/seedu/task/model/ModelManager.java
+###### \java\seedu\task\model\ModelManager.java
 ``` java
         @Override
         public boolean run(ReadOnlyTask task) {
@@ -253,7 +253,7 @@ public class UndoneCommandParser extends CommandParser {
     }
 
 ```
-###### /java/seedu/task/model/ModelManager.java
+###### \java\seedu\task\model\ModelManager.java
 ``` java
     private class FloatDateQualifier implements Qualifier {
 
@@ -264,21 +264,21 @@ public class UndoneCommandParser extends CommandParser {
     }
 
 ```
-###### /java/seedu/task/model/ModelManager.java
+###### \java\seedu\task\model\ModelManager.java
 ``` java
     private class DoneQualifier implements Qualifier {
 
         private boolean value;
 
 ```
-###### /java/seedu/task/model/ModelManager.java
+###### \java\seedu\task\model\ModelManager.java
 ``` java
         DoneQualifier(boolean value) {
             this.value = value;
         }
 
 ```
-###### /java/seedu/task/model/ModelManager.java
+###### \java\seedu\task\model\ModelManager.java
 ``` java
         @Override
         public boolean run(ReadOnlyTask task) {
@@ -288,20 +288,20 @@ public class UndoneCommandParser extends CommandParser {
 
 }
 ```
-###### /java/seedu/task/model/task/Task.java
+###### \java\seedu\task\model\task\Task.java
 ``` java
     public void setIsDone(boolean isDone) {
         this.isDone = isDone;
     }
 ```
-###### /java/seedu/task/model/task/Task.java
+###### \java\seedu\task\model\task\Task.java
 ``` java
     @Override
     public boolean isDone() {
         return isDone;
     }
 ```
-###### /java/seedu/task/model/task/UniqueTaskList.java
+###### \java\seedu\task\model\task\UniqueTaskList.java
 ``` java
     /**
      * Set Target Task to done.
@@ -315,7 +315,7 @@ public class UndoneCommandParser extends CommandParser {
     }
 
 ```
-###### /java/seedu/task/model/task/UniqueTaskList.java
+###### \java\seedu\task\model\task\UniqueTaskList.java
 ``` java
     /**
      * Set Target Task to undone.
@@ -329,7 +329,7 @@ public class UndoneCommandParser extends CommandParser {
     }
 
 ```
-###### /java/seedu/task/model/TaskManager.java
+###### \java\seedu\task\model\TaskManager.java
 ``` java
     /**
      *
@@ -340,7 +340,7 @@ public class UndoneCommandParser extends CommandParser {
     }
 
 ```
-###### /java/seedu/task/model/TaskManager.java
+###### \java\seedu\task\model\TaskManager.java
 ``` java
     /**
      *
@@ -351,7 +351,7 @@ public class UndoneCommandParser extends CommandParser {
     }
 
 ```
-###### /java/seedu/task/ui/TaskCard.java
+###### \java\seedu\task\ui\TaskCard.java
 ``` java
     public TaskCard(ReadOnlyTask task, int displayedIndex, String...fxml) {
         super(fxml.length == 0 ? FXML : fxml[0]);
@@ -378,21 +378,21 @@ public class UndoneCommandParser extends CommandParser {
         initTags(task);
     }
 ```
-###### /java/seedu/task/ui/TaskCard.java
+###### \java\seedu\task\ui\TaskCard.java
 ``` java
     public  void setExpend(boolean value) {
         this.status = value;
         plane.setExpanded(value);
     }
 ```
-###### /java/seedu/task/ui/TaskCard.java
+###### \java\seedu\task\ui\TaskCard.java
 ``` java
     public boolean expendStatus() {
         return this.status;
     }
 }
 ```
-###### /java/seedu/task/ui/TaskListPanel.java
+###### \java\seedu\task\ui\TaskListPanel.java
 ``` java
     public void scrollTo(int index) {
         Platform.runLater(() -> {
