--- a/collated/main/A0140063X.md
+++ b/collated/main/A0140063X.md
@@ -1,5 +1,5 @@
 # A0140063X
-###### /java/seedu/task/commons/core/History.java
+###### \java\seedu\task\commons\core\History.java
 ``` java
 /**
  * Maintains undo/redo status and provide filepaths to support undo/redo.
@@ -93,7 +93,7 @@ public class History {
 
     /**
      * This method returns the filePath for undo to load from.
-     * This method is only used when undo command is called, therefore undoCount must not be 0.
+     * This method is only used when undo command is executing, therefore undoCount must not be 0.
      * currentFileIndex must never be negative since it corresponds to a file.
      *
      * @return File path for undo to load from.
@@ -110,7 +110,7 @@ public class History {
 
     /**
      * This method returns the filePath for redo to load from.
-     * This method is only used when redo command is called, therefore redoCount must not be 0.
+     * This method is only used when redo command is executing, therefore redoCount must not be 0.
      *
      * @return File path for redo to load from.
      */
@@ -125,7 +125,7 @@ public class History {
 
     /**
      * This method is called when a command that modifies taskmanager have been executed.
-     * If backupFilePath is not empty, it means backup is done. Updates values to maintain proper status.
+     * If backupFilePath is not empty, it means backup was successfully done. Updates values to maintain proper status.
      *
      * @param backupFilePath    File path that backup was saved into.
      */
@@ -192,8 +192,16 @@ public class History {
     }
 }
 ```
-###### /java/seedu/task/commons/events/model/TaskManagerChangedEvent.java
+###### \java\seedu\task\commons\events\model\TaskManagerChangedEvent.java
 ``` java
+    /**
+     * This event represents the event that task manager have been modified.
+     * The new data and backupFilePath to backup into if needed is contained.
+     * backupFilePath can be empty is not needed.
+     *
+     * @param data              New taskmanager after changes.
+     * @param backupFilePath    File path to back up into.
+     */
     public TaskManagerChangedEvent(ReadOnlyTaskManager data, String backupFilePath) {
         assert data != null;
         this.data = data;
@@ -201,7 +209,7 @@ public class History {
     }
 
 ```
-###### /java/seedu/task/logic/commands/AddCommand.java
+###### \java\seedu\task\logic\commands\AddCommand.java
 ``` java
     /**
      * Creates an AddCommand using raw values.
@@ -224,7 +232,7 @@ public class History {
     }
 
 ```
-###### /java/seedu/task/logic/commands/Command.java
+###### \java\seedu\task\logic\commands\Command.java
 ``` java
     /**
      * Provides any needed dependencies to the command. Commands making use of any of these should override this method
@@ -239,7 +247,7 @@ public class History {
     }
 
 ```
-###### /java/seedu/task/logic/commands/Command.java
+###### \java\seedu\task\logic\commands\Command.java
 ``` java
     /**
      * This method gets storage to read taskmanager data from the given filePath and returns the data back to caller.
@@ -266,7 +274,7 @@ public class History {
     }
 
 ```
-###### /java/seedu/task/logic/commands/Command.java
+###### \java\seedu\task\logic\commands\Command.java
 ``` java
     /**
      * This method returns the task for the given index. CommandException is thrown if index is invalid.
@@ -288,35 +296,35 @@ public class History {
     }
 }
 ```
-###### /java/seedu/task/logic/commands/EditCommand.java
+###### \java\seedu\task\logic\commands\EditCommand.java
 ``` java
         public void setStartDate(Optional<Date> startDate) {
             this.startDate = startDate;
         }
 
 ```
-###### /java/seedu/task/logic/commands/EditCommand.java
+###### \java\seedu\task\logic\commands\EditCommand.java
 ``` java
         public Optional<Date> getStartDate() {
             return startDate;
         }
 
 ```
-###### /java/seedu/task/logic/commands/EditCommand.java
+###### \java\seedu\task\logic\commands\EditCommand.java
 ``` java
         public void setEndDate(Optional<Date> endDate) {
             this.endDate = endDate;
         }
 
 ```
-###### /java/seedu/task/logic/commands/EditCommand.java
+###### \java\seedu\task\logic\commands\EditCommand.java
 ``` java
         public Optional<Date> getEndDate() {
             return endDate;
         }
 
 ```
-###### /java/seedu/task/logic/commands/GetGoogleCalendarCommand.java
+###### \java\seedu\task\logic\commands\GetGoogleCalendarCommand.java
 ``` java
 /**
  * Grabs upcoming events from google and save them as tasks.
@@ -394,7 +402,7 @@ public class GetGoogleCalendarCommand extends Command {
     }
 }
 ```
-###### /java/seedu/task/logic/commands/PostGoogleCalendarCommand.java
+###### \java\seedu\task\logic\commands\PostGoogleCalendarCommand.java
 ``` java
 /**
  * Post either selected or all task to Google Calendar.
@@ -542,7 +550,7 @@ public class PostGoogleCalendarCommand extends Command {
 
 }
 ```
-###### /java/seedu/task/logic/commands/RedoCommand.java
+###### \java\seedu\task\logic\commands\RedoCommand.java
 ``` java
 /**
  * Redo last undo.
@@ -586,7 +594,7 @@ public class RedoCommand extends Command {
 
 }
 ```
-###### /java/seedu/task/logic/commands/SmartAddCommand.java
+###### \java\seedu\task\logic\commands\SmartAddCommand.java
 ``` java
     /**
      * Creates an SmartAddCommand using raw values.
@@ -612,7 +620,7 @@ public class RedoCommand extends Command {
     }
 
 ```
-###### /java/seedu/task/logic/commands/SmartAddCommand.java
+###### \java\seedu\task\logic\commands\SmartAddCommand.java
 ``` java
     /**
      * This method takes in the description string, creates and returns the corresponding task.
@@ -631,7 +639,7 @@ public class RedoCommand extends Command {
     }
 
 ```
-###### /java/seedu/task/logic/commands/UndoCommand.java
+###### \java\seedu\task\logic\commands\UndoCommand.java
 ``` java
 /**
  * Undo last task.
@@ -678,7 +686,7 @@ public class UndoCommand extends Command {
 
 }
 ```
-###### /java/seedu/task/logic/LogicManager.java
+###### \java\seedu\task\logic\LogicManager.java
 ``` java
     public LogicManager(Model model, Storage storage) {
         this.model = model;
@@ -687,7 +695,7 @@ public class UndoCommand extends Command {
     }
 
 ```
-###### /java/seedu/task/logic/LogicManager.java
+###### \java\seedu\task\logic\LogicManager.java
 ``` java
     @Override
     public CommandResult execute(String commandText) throws CommandException {
@@ -698,7 +706,7 @@ public class UndoCommand extends Command {
     }
 
 ```
-###### /java/seedu/task/logic/util/LogicHelper.java
+###### \java\seedu\task\logic\util\LogicHelper.java
 ``` java
 /**
  * This is a helper class that mainly converts task to/from events.
@@ -764,7 +772,7 @@ public class LogicHelper {
     }
 }
 ```
-###### /java/seedu/task/MainApp.java
+###### \java\seedu\task\MainApp.java
 ``` java
     /**
      * Initializes the History class. Also saves initial data into file.
@@ -777,13 +785,13 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/Model.java
+###### \java\seedu\task\model\Model.java
 ``` java
     /** Sets the eventId of task */
     void setTaskEventId(ReadOnlyTask target, String eventId) throws TaskNotFoundException, IllegalValueException;
 
 ```
-###### /java/seedu/task/model/ModelManager.java
+###### \java\seedu\task\model\ModelManager.java
 ``` java
     /**
      * Resets data of taskManager.
@@ -795,7 +803,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/ModelManager.java
+###### \java\seedu\task\model\ModelManager.java
 ``` java
     /**
      * Load data into taskManager. Used by Undo/Redo Command.
@@ -807,7 +815,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/ModelManager.java
+###### \java\seedu\task\model\ModelManager.java
 ``` java
     /**
      *
@@ -819,7 +827,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/ModelManager.java
+###### \java\seedu\task\model\ModelManager.java
 ``` java
     /**
      * Raises an event to indicate the model has changed.
@@ -833,7 +841,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/ModelManager.java
+###### \java\seedu\task\model\ModelManager.java
 ``` java
     /**
      *
@@ -850,7 +858,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/ModelManager.java
+###### \java\seedu\task\model\ModelManager.java
 ``` java
     /**
      * This method adds every task in tasks to model.
@@ -873,14 +881,14 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/task/Date.java
+###### \java\seedu\task\model\task\Date.java
 ``` java
     public Date() {
         this.value = null;
     }
 
 ```
-###### /java/seedu/task/model/task/Date.java
+###### \java\seedu\task\model\task\Date.java
 ``` java
     /**
      * Validates and creates date given a String.
@@ -914,7 +922,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/task/Date.java
+###### \java\seedu\task\model\task\Date.java
 ``` java
     /**
      * Creates a Date object from given eventDateTime. Used for Google Calendar.
@@ -938,7 +946,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/task/Date.java
+###### \java\seedu\task\model\task\Date.java
 ``` java
     /**
      *
@@ -949,7 +957,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/task/Date.java
+###### \java\seedu\task\model\task\Date.java
 ``` java
     /**
      *
@@ -960,7 +968,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/task/Date.java
+###### \java\seedu\task\model\task\Date.java
 ``` java
     /**
      * Returns true if a given string is a valid date.
@@ -974,7 +982,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/task/Date.java
+###### \java\seedu\task\model\task\Date.java
 ``` java
     /**
      * Compares two dates and returns true if date1 is before date2
@@ -988,7 +996,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/task/Date.java
+###### \java\seedu\task\model\task\Date.java
 ``` java
     /**
      * Display dates in this format: M/d/y h:mm a
@@ -1008,7 +1016,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/task/Date.java
+###### \java\seedu\task\model\task\Date.java
 ``` java
     /**
      *
@@ -1031,7 +1039,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/task/Task.java
+###### \java\seedu\task\model\task\Task.java
 ``` java
     public void setStartDate(Date startDate) {
         assert startDate != null;
@@ -1039,7 +1047,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/task/Task.java
+###### \java\seedu\task\model\task\Task.java
 ``` java
     @Override
     public Date getStartDate() {
@@ -1047,7 +1055,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/task/Task.java
+###### \java\seedu\task\model\task\Task.java
 ``` java
     public void setEndDate(Date endDate) {
         assert endDate != null;
@@ -1055,7 +1063,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/task/Task.java
+###### \java\seedu\task\model\task\Task.java
 ``` java
     @Override
     public Date getEndDate() {
@@ -1063,7 +1071,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/task/Task.java
+###### \java\seedu\task\model\task\Task.java
 ``` java
     @Override
     public String getEventId() {
@@ -1071,7 +1079,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/task/Task.java
+###### \java\seedu\task\model\task\Task.java
 ``` java
     /**
      *
@@ -1087,7 +1095,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/task/Task.java
+###### \java\seedu\task\model\task\Task.java
 ``` java
     /**
      * Checks if eventId is valid
@@ -1104,7 +1112,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/task/UniqueTaskList.java
+###### \java\seedu\task\model\task\UniqueTaskList.java
 ``` java
     /**
      * Set target task's eventId.
@@ -1130,7 +1138,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/model/TaskManager.java
+###### \java\seedu\task\model\TaskManager.java
 ``` java
     /**
      *
@@ -1145,7 +1153,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/storage/StorageManager.java
+###### \java\seedu\task\storage\StorageManager.java
 ``` java
     /**
      * Saves backup into given backupFilePath.
@@ -1164,13 +1172,12 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/storage/StorageManager.java
+###### \java\seedu\task\storage\StorageManager.java
 ``` java
     /**
      * Triggers whenever a command that modifies data is executed. Backup if required. Save data into file either way.
      *
-     * @param event
-     *            The event that represents taskmanager is changed.
+     * @param event     The event that represents taskmanager is changed.
      */
     @Override
     @Subscribe
@@ -1187,7 +1194,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/storage/XmlTaskManagerStorage.java
+###### \java\seedu\task\storage\XmlTaskManagerStorage.java
 ``` java
     /**
      * Reads from data and creates backup.
@@ -1220,7 +1227,7 @@ public class LogicHelper {
 
 }
 ```
-###### /java/seedu/task/ui/BrowserPanel.java
+###### \java\seedu\task\ui\BrowserPanel.java
 ``` java
     /**
      * Loads Google Calendar.
@@ -1230,7 +1237,7 @@ public class LogicHelper {
     }
 
 ```
-###### /java/seedu/task/ui/StatusBarFooter.java
+###### \java\seedu\task\ui\StatusBarFooter.java
 ``` java
     /**
      * Displays last updated timing.
