--- a/collated/main/A0142487Y.md
+++ b/collated/main/A0142487Y.md
@@ -1,5 +1,5 @@
 # A0142487Y
-###### /java/seedu/task/commons/events/storage/UpdateUserPrefsEvent.java
+###### \java\seedu\task\commons\events\storage\UpdateUserPrefsEvent.java
 ``` java
 /**
  * Indicates an exception during a file saving
@@ -23,7 +23,7 @@ public class UpdateUserPrefsEvent extends BaseEvent {
 
 }
 ```
-###### /java/seedu/task/commons/util/CollectionUtil.java
+###### \java\seedu\task\commons\util\CollectionUtil.java
 ``` java
     /**
      * Returns true if the given {@code keyword} is found in the given (@code words)
@@ -36,7 +36,7 @@ public class UpdateUserPrefsEvent extends BaseEvent {
     }
 
 ```
-###### /java/seedu/task/commons/util/DateUtil.java
+###### \java\seedu\task\commons\util\DateUtil.java
 ``` java
 public class DateUtil {
 
@@ -132,7 +132,7 @@ public class DateUtil {
 
 }
 ```
-###### /java/seedu/task/commons/util/TaskUtil.java
+###### \java\seedu\task\commons\util\TaskUtil.java
 ``` java
 public class TaskUtil {
 
@@ -192,7 +192,7 @@ public class TaskUtil {
     }
 }
 ```
-###### /java/seedu/task/logic/commandlibrary/CommandLibrary.java
+###### \java\seedu\task\logic\commandlibrary\CommandLibrary.java
 ``` java
 public class CommandLibrary {
 
@@ -379,7 +379,7 @@ public class CommandLibrary {
     }
 }
 ```
-###### /java/seedu/task/logic/commands/HelpCommand.java
+###### \java\seedu\task\logic\commands\HelpCommand.java
 ``` java
 /**
  * Format full help instructions for every command for display.
@@ -415,7 +415,7 @@ public class HelpCommand extends Command {
 
 }
 ```
-###### /java/seedu/task/logic/commands/ThemeChangeCommand.java
+###### \java\seedu\task\logic\commands\ThemeChangeCommand.java
 ``` java
 /**
  * Saves task manager in a different directory.
@@ -452,7 +452,7 @@ public class ThemeChangeCommand extends Command {
 
 }
 ```
-###### /java/seedu/task/MainApp.java
+###### \java\seedu\task\MainApp.java
 ``` java
     @Subscribe
     public void handleUpdateUserPrefsEvent(UpdateUserPrefsEvent event) {
@@ -461,7 +461,7 @@ public class ThemeChangeCommand extends Command {
     }
 
 ```
-###### /java/seedu/task/model/ModelManager.java
+###### \java\seedu\task\model\ModelManager.java
 ``` java
     /**
      * This qualifier is specifically for strings,including name, location,remark and tags.
@@ -539,7 +539,7 @@ public class ThemeChangeCommand extends Command {
         }
     }
 ```
-###### /java/seedu/task/model/tag/UniqueTagList.java
+###### \java\seedu\task\model\tag\UniqueTagList.java
 ``` java
     /**
      * Returns a {@code string} connected by tagNames, separated by a space in between
@@ -556,7 +556,7 @@ public class ThemeChangeCommand extends Command {
 
 }
 ```
-###### /java/seedu/task/model/task/TaskComparator.java
+###### \java\seedu\task\model\task\TaskComparator.java
 ``` java
 public class TaskComparator implements Comparator<ReadOnlyTask> {
 
@@ -583,7 +583,7 @@ public class TaskComparator implements Comparator<ReadOnlyTask> {
     }
 }
 ```
-###### /java/seedu/task/model/UserPrefs.java
+###### \java\seedu\task\model\UserPrefs.java
 ``` java
     public void setTheme(String themeName) {
         this.theme = Theme.getTheme(themeName);
@@ -594,7 +594,7 @@ public class TaskComparator implements Comparator<ReadOnlyTask> {
     }
 
 ```
-###### /java/seedu/task/storage/StorageManager.java
+###### \java\seedu\task\storage\StorageManager.java
 ``` java
         UserPrefs userPrefs = optionalUserPrefs.get();
         userPrefs.setTheme(themeName);
@@ -607,7 +607,7 @@ public class TaskComparator implements Comparator<ReadOnlyTask> {
 
     }
 ```
-###### /java/seedu/task/ui/MainWindow.java
+###### \java\seedu\task\ui\MainWindow.java
 ``` java
     protected void fillInnerParts() {
         switch (this.userPrefs.getTheme()) {
@@ -635,7 +635,7 @@ public class TaskComparator implements Comparator<ReadOnlyTask> {
     }
 
 ```
-###### /java/seedu/task/ui/Theme.java
+###### \java\seedu\task\ui\Theme.java
 ``` java
 public enum Theme {
     Default("Default"), Dark("Dark"), Light("Light");
@@ -668,7 +668,7 @@ public enum Theme {
     }
 }
 ```
-###### /java/seedu/task/ui/UiManager.java
+###### \java\seedu\task\ui\UiManager.java
 ``` java
     @Subscribe
     public CommandResult handleQueryUnknownCommandEvent(QueryUnknownCommandEvent event) {
@@ -677,7 +677,7 @@ public enum Theme {
     }
 
 ```
-###### /resources/view/LightTheme.css
+###### \resources\view\LightTheme.css
 ``` css
 .anchor-pane {
 	-fx-background-color: #dde2e3;
