--- a/collated/main/A0142939W.md
+++ b/collated/main/A0142939W.md
@@ -1,11 +1,11 @@
 # A0142939W
-###### /java/seedu/task/commons/core/Config.java
+###### \java\seedu\task\commons\core\Config.java
 ``` java
     public void setTaskManagerFilePath(String taskManagerFilePath) {
         this.taskManagerFilePath = taskManagerFilePath;
     }
 ```
-###### /java/seedu/task/commons/events/model/FilePathChangedEvent.java
+###### \java\seedu\task\commons\events\model\FilePathChangedEvent.java
 ``` java
 /** Indicates the FilePath in the model has changed*/
 public class FilePathChangedEvent extends BaseEvent {
@@ -24,7 +24,7 @@ public class FilePathChangedEvent extends BaseEvent {
     }
 }
 ```
-###### /java/seedu/task/commons/events/ui/ShowHelpFormatRequestEvent.java
+###### \java\seedu\task\commons\events\ui\ShowHelpFormatRequestEvent.java
 ``` java
 /**
  * An event requesting to view the help page.
@@ -38,7 +38,7 @@ public class ShowHelpFormatRequestEvent extends BaseEvent {
 
 }
 ```
-###### /java/seedu/task/commons/util/FileUtil.java
+###### \java\seedu\task\commons\util\FileUtil.java
 ``` java
     public static boolean isFileDirectory(File file) {
         return file.isDirectory();
@@ -61,7 +61,7 @@ public class ShowHelpFormatRequestEvent extends BaseEvent {
         }
     }
 ```
-###### /java/seedu/task/logic/commands/LoadCommand.java
+###### \java\seedu\task\logic\commands\LoadCommand.java
 ``` java
 /**
  * Saves task manager in a different directory.
@@ -118,7 +118,7 @@ public class LoadCommand extends Command {
 
 }
 ```
-###### /java/seedu/task/logic/commands/SaveCommand.java
+###### \java\seedu\task\logic\commands\SaveCommand.java
 ``` java
 /**
  * Saves task manager in a different directory.
@@ -159,18 +159,18 @@ public class SaveCommand extends Command {
 
 }
 ```
-###### /java/seedu/task/model/Model.java
+###### \java\seedu\task\model\Model.java
 ``` java
     /** Changes the file path for data to be saved in */
     void changeFilePath(String pathName);
 
 ```
-###### /java/seedu/task/model/Model.java
+###### \java\seedu\task\model\Model.java
 ``` java
     /** Changes the load path for data to be loaded from*/
     void loadFromLocation(String loadPath);
 ```
-###### /java/seedu/task/model/ModelManager.java
+###### \java\seedu\task\model\ModelManager.java
 ``` java
     @Override
     public void changeFilePath(String newPath) {
@@ -178,14 +178,14 @@ public class SaveCommand extends Command {
     }
 
 ```
-###### /java/seedu/task/model/ModelManager.java
+###### \java\seedu\task\model\ModelManager.java
 ``` java
     @Override
     public void loadFromLocation(String loadPath) {
         indicateFilePathChanged(loadPath);
     }
 ```
-###### /java/seedu/task/model/tag/TagColorMap.java
+###### \java\seedu\task\model\tag\TagColorMap.java
 ``` java
 /**
  * Represents the static TagColorMap in the
@@ -227,7 +227,7 @@ public class TagColorMap {
     }
 }
 ```
-###### /java/seedu/task/storage/Storage.java
+###### \java\seedu\task\storage\Storage.java
 ``` java
     /**
      * Changes the current file path to intended filepath
@@ -235,7 +235,7 @@ public class TagColorMap {
      */
     void handleFilePathChangedEvent(FilePathChangedEvent fpce);
 ```
-###### /java/seedu/task/storage/StorageManager.java
+###### \java\seedu\task\storage\StorageManager.java
 ``` java
     @Override
     @Subscribe
@@ -251,7 +251,7 @@ public class TagColorMap {
     }
 
 ```
-###### /java/seedu/task/ui/CommandBox.java
+###### \java\seedu\task\ui\CommandBox.java
 ``` java
     /**
      * Sets the text in command box.
@@ -262,7 +262,7 @@ public class TagColorMap {
     }
 
 ```
-###### /java/seedu/task/ui/CommandBox.java
+###### \java\seedu\task\ui\CommandBox.java
 ``` java
     /**
      * Sets the current focus to be the textbox
@@ -272,7 +272,7 @@ public class TagColorMap {
     }
 
 ```
-###### /java/seedu/task/ui/CommandBox.java
+###### \java\seedu\task\ui\CommandBox.java
 ``` java
     /**
      * Sets the focus to be at the end of the textbox
@@ -282,7 +282,7 @@ public class TagColorMap {
     }
 
 ```
-###### /java/seedu/task/ui/CommandBox.java
+###### \java\seedu\task\ui\CommandBox.java
 ``` java
     /**
      * Types the given text in the commandbox and sets focus there
@@ -296,7 +296,7 @@ public class TagColorMap {
 
 }
 ```
-###### /java/seedu/task/ui/HelpFormatWindow.java
+###### \java\seedu\task\ui\HelpFormatWindow.java
 ``` java
 /**
  * Controller for a help page
@@ -334,7 +334,7 @@ public class HelpFormatWindow extends UiPart<Region> {
     }
 }
 ```
-###### /java/seedu/task/ui/MainWindow.java
+###### \java\seedu\task\ui\MainWindow.java
 ``` java
     @FXML
     public void handleHelpFormat() {
@@ -382,13 +382,13 @@ public class HelpFormatWindow extends UiPart<Region> {
         taskListPanel.scrollUp(scroll);
     }
 ```
-###### /java/seedu/task/ui/MainWindow.java
+###### \java\seedu\task\ui\MainWindow.java
 ``` java
     public TaskListPanel getTaskListPanel() {
         return this.taskListPanel;
     }
 ```
-###### /java/seedu/task/ui/Scroll.java
+###### \java\seedu\task\ui\Scroll.java
 ``` java
 /**
  * This class controls the scroll bar of any listview.
@@ -483,7 +483,7 @@ public class Scroll {
 
 }
 ```
-###### /java/seedu/task/ui/StatusBarFooter.java
+###### \java\seedu\task\ui\StatusBarFooter.java
 ``` java
     private void setSaveLocation(String location) {
         this.saveLocationStatus.setText(location);
@@ -494,7 +494,7 @@ public class Scroll {
     }
 
 ```
-###### /java/seedu/task/ui/StatusBarFooter.java
+###### \java\seedu\task\ui\StatusBarFooter.java
 ``` java
     @Subscribe
     public void handleFilePathChangedEvent(FilePathChangedEvent fpce) {
@@ -502,7 +502,7 @@ public class Scroll {
     }
 
 ```
-###### /java/seedu/task/ui/TaskCard.java
+###### \java\seedu\task\ui\TaskCard.java
 ``` java
     private void initTags(ReadOnlyTask task) {
         task.getTags().forEach(tag -> tags.getChildren().add(
@@ -510,7 +510,7 @@ public class Scroll {
     }
 
 ```
-###### /java/seedu/task/ui/TaskCard.java
+###### \java\seedu\task\ui\TaskCard.java
 ``` java
     private Label createLabel(String tagName, String color) {
         Label tag = new Label(tagName);
@@ -518,14 +518,14 @@ public class Scroll {
         return tag;
     }
 ```
-###### /java/seedu/task/ui/TaskListPanel.java
+###### \java\seedu\task\ui\TaskListPanel.java
 ``` java
     public void scrollDown(Scroll scroll) {
         scroll.scrollDown(taskListView);
     }
 
 ```
-###### /java/seedu/task/ui/TaskListPanel.java
+###### \java\seedu\task\ui\TaskListPanel.java
 ``` java
     public void scrollUp(Scroll scroll) {
         scroll.scrollUp(taskListView);
@@ -533,7 +533,7 @@ public class Scroll {
 
     class TaskListViewCell extends ListCell<ReadOnlyTask> {
 ```
-###### /java/seedu/task/ui/TaskListPanel.java
+###### \java\seedu\task\ui\TaskListPanel.java
 ``` java
     public ListView<ReadOnlyTask> getTaskListView() {
         return taskListView;
@@ -541,7 +541,7 @@ public class Scroll {
 
 }
 ```
-###### /java/seedu/task/ui/UiManager.java
+###### \java\seedu\task\ui\UiManager.java
 ``` java
     @Subscribe
     public void handleShowHelpFormatEvent(ShowHelpFormatRequestEvent event) {
