--- a/collated/test/A0139975J.md
+++ b/collated/test/A0139975J.md
@@ -1,5 +1,5 @@
 # A0139975J
-###### /java/guitests/DoneCommandTest.java
+###### \java\guitests\DoneCommandTest.java
 ``` java
 public class DoneCommandTest extends TaskManagerGuiTest {
 
@@ -44,7 +44,7 @@ public class DoneCommandTest extends TaskManagerGuiTest {
 
 }
 ```
-###### /java/guitests/ListByDoneUndoneCommandTest.java
+###### \java\guitests\ListByDoneUndoneCommandTest.java
 ``` java
 public class ListByDoneUndoneCommandTest extends TaskManagerGuiTest {
 
@@ -85,7 +85,7 @@ public class ListByDoneUndoneCommandTest extends TaskManagerGuiTest {
     }
 }
 ```
-###### /java/guitests/ListFloatingDateCommandTest.java
+###### \java\guitests\ListFloatingDateCommandTest.java
 ``` java
 public class ListFloatingDateCommandTest extends TaskManagerGuiTest {
 
@@ -119,7 +119,7 @@ public class ListFloatingDateCommandTest extends TaskManagerGuiTest {
 
 }
 ```
-###### /java/guitests/UndoneCommandTest.java
+###### \java\guitests\UndoneCommandTest.java
 ``` java
 public class UndoneCommandTest extends TaskManagerGuiTest {
 
