--- a/collated/test/A0140063X.md
+++ b/collated/test/A0140063X.md
@@ -1,5 +1,5 @@
 # A0140063X
-###### /java/guitests/RedoCommandTest.java
+###### \java\guitests\RedoCommandTest.java
 ``` java
 public class RedoCommandTest extends TaskManagerGuiTest {
 
@@ -129,7 +129,7 @@ public class RedoCommandTest extends TaskManagerGuiTest {
 
 }
 ```
-###### /java/guitests/UndoCommandTest.java
+###### \java\guitests\UndoCommandTest.java
 ``` java
 public class UndoCommandTest extends TaskManagerGuiTest {
 
@@ -259,7 +259,7 @@ public class UndoCommandTest extends TaskManagerGuiTest {
 
 }
 ```
-###### /java/seedu/task/commons/core/HistoryTest.java
+###### \java\seedu\task\commons\core\HistoryTest.java
 ``` java
 public class HistoryTest {
     private History history;
@@ -329,7 +329,7 @@ public class HistoryTest {
     }
 }
 ```
-###### /java/seedu/task/logic/util/LogicHelperTest.java
+###### \java\seedu\task\logic\util\LogicHelperTest.java
 ``` java
 public class LogicHelperTest {
 
@@ -441,7 +441,7 @@ public class LogicHelperTest {
 
 }
 ```
-###### /java/seedu/task/model/ModelManagerTest.java
+###### \java\seedu\task\model\ModelManagerTest.java
 ``` java
 public class ModelManagerTest {
 
@@ -542,7 +542,7 @@ public class ModelManagerTest {
 
     }
 ```
-###### /java/seedu/task/model/task/DateTest.java
+###### \java\seedu\task\model\task\DateTest.java
 ``` java
     // display format is "M/d/y H:mm a, prettytime format"
     @Test
@@ -573,7 +573,7 @@ public class ModelManagerTest {
     }
 
 ```
-###### /java/seedu/task/model/task/DateTest.java
+###### \java\seedu\task\model\task\DateTest.java
 ``` java
     @Test
     public void isValidDate() {
@@ -606,7 +606,7 @@ public class ModelManagerTest {
     }
 
 ```
-###### /java/seedu/task/model/task/DateTest.java
+###### \java\seedu\task\model\task\DateTest.java
 ``` java
     @Test
     public void dateConstructorUsingEvent_validEventDateTime_success() throws IllegalValueException {
@@ -627,7 +627,7 @@ public class ModelManagerTest {
     }
 
 ```
-###### /java/seedu/task/model/task/DateTest.java
+###### \java\seedu\task\model\task\DateTest.java
 ``` java
     @Test
     public void dateConstructorUsingEvent_invalidEventDateTime_dateWithNoValueCreated() throws IllegalValueException {
@@ -643,7 +643,7 @@ public class ModelManagerTest {
     }
 
 ```
-###### /java/seedu/task/model/task/DateTest.java
+###### \java\seedu\task\model\task\DateTest.java
 ``` java
     @Test
     public void equals_bothEmpty_true() throws IllegalValueException {
@@ -654,7 +654,7 @@ public class ModelManagerTest {
     }
 
 ```
-###### /java/seedu/task/model/task/DateTest.java
+###### \java\seedu\task\model\task\DateTest.java
 ``` java
     @Test
     public void equals_oneEmpty_false() throws IllegalValueException {
@@ -665,7 +665,7 @@ public class ModelManagerTest {
     }
 
 ```
-###### /java/seedu/task/model/task/DateTest.java
+###### \java\seedu\task\model\task\DateTest.java
 ``` java
     @Test
     public void equals_differentFormat_true() throws IllegalValueException {
@@ -676,7 +676,7 @@ public class ModelManagerTest {
     }
 
 ```
-###### /java/seedu/task/model/task/DateTest.java
+###### \java\seedu\task\model\task\DateTest.java
 ``` java
     /**
      * This method creates a DateTime object give a dateString.
@@ -690,7 +690,7 @@ public class ModelManagerTest {
     }
 
 ```
-###### /java/seedu/task/model/task/DateTest.java
+###### \java\seedu\task\model\task\DateTest.java
 ``` java
     /**
      * This method creates two Date objects using two different type of constructors
@@ -709,7 +709,7 @@ public class ModelManagerTest {
     }
 
 ```
-###### /java/seedu/task/testutil/TestTask.java
+###### \java\seedu\task\testutil\TestTask.java
 ``` java
     @Override
     public String getEventId() {
