--- a/collated/test/A0142487Y.md
+++ b/collated/test/A0142487Y.md
@@ -1,5 +1,5 @@
 # A0142487Y
-###### /java/guitests/FindCommandTest.java
+###### \java\guitests\FindCommandTest.java
 ``` java
 public class FindCommandTest extends TaskManagerGuiTest {
 
@@ -98,7 +98,7 @@ public class FindCommandTest extends TaskManagerGuiTest {
     }
 }
 ```
-###### /java/guitests/FindExactCommandTest.java
+###### \java\guitests\FindExactCommandTest.java
 ``` java
 public class FindExactCommandTest extends TaskManagerGuiTest {
 
@@ -141,7 +141,7 @@ public class FindExactCommandTest extends TaskManagerGuiTest {
     }
 }
 ```
-###### /java/guitests/HelpCommandTest.java
+###### \java\guitests\HelpCommandTest.java
 ``` java
 public class HelpCommandTest extends TaskManagerGuiTest {
 
@@ -174,7 +174,7 @@ public class HelpCommandTest extends TaskManagerGuiTest {
         assertResultMessage(String.format(MESSAGE_COMMAND_DOES_NOT_EXIST, incorrectCommandWord));
     }
 ```
-###### /java/guitests/ListByTagCommandTest.java
+###### \java\guitests\ListByTagCommandTest.java
 ``` java
 public class ListByTagCommandTest extends TaskManagerGuiTest {
     @Test
