--- a/collated/test/A0142939W.md
+++ b/collated/test/A0142939W.md
@@ -1,5 +1,5 @@
 # A0142939W
-###### /java/guitests/HelpFormatWindowTest.java
+###### \java\guitests\HelpFormatWindowTest.java
 ``` java
 public class HelpFormatWindowTest extends TaskManagerGuiTest {
 
@@ -36,7 +36,7 @@ public class HelpFormatWindowTest extends TaskManagerGuiTest {
 
 }
 ```
-###### /java/guitests/LoadCommandTest.java
+###### \java\guitests\LoadCommandTest.java
 ``` java
 public class LoadCommandTest extends TaskManagerGuiTest {
 
@@ -74,7 +74,7 @@ public class LoadCommandTest extends TaskManagerGuiTest {
 
 }
 ```
-###### /java/guitests/SaveCommandTest.java
+###### \java\guitests\SaveCommandTest.java
 ``` java
 public class SaveCommandTest extends TaskManagerGuiTest {
 
@@ -105,7 +105,7 @@ public class SaveCommandTest extends TaskManagerGuiTest {
 
 }
 ```
-###### /java/guitests/ShortcutTest.java
+###### \java\guitests\ShortcutTest.java
 ``` java
 public class ShortcutTest extends TaskManagerGuiTest {
 
